--- a/clear-cache-app/package.json
+++ b/clear-cache-app/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "my-app",
+  "name": "clear-cache-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "web-vitals": "^1.1.2",
-    "whatwg-fetch": "^3.6.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,10 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "2.4.1",
-    "react-router-dom": "^5.2.1"
   }
 }
