--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
+    "redux": "^1.0.0-rc",
     "web-vitals": "^1.1.2",
     "whatwg-fetch": "^3.6.2"
   },
@@ -43,6 +43,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "prettier": "2.4.1",
-    "react-router-dom": "^5.2.1"
+    "react-router-dom": "^5.2.1",
+    "redux-devtools": "^3.7.0"
   }
 }
