--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.1",
-    "web-vitals": "^1.1.2",
-    "whatwg-fetch": "^3.6.2"
+    "sass": "^1.49.9",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "2.4.1",
-    "react-router-dom": "^5.2.1"
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "2.4.1"
   }
 }
